* Partsgroups can now be nested though this is not yet used by LSMB (Chris T)
* Timecard system generalized to allow labor and materials cards too (Chris T)
* Can now print envelopes or shipping labels from many screens (Chris T)
* Can now select default formats for printed invoices (Chris T)
* Shipvia is now a text area. (Chris T)
* Descriptions can now be locked on invoices and orders (Chris T)

Enhancing Security Structure
* Session expiration now with configurable behavior (Chris T)
* Templates for user documents (like invoices) now stored in the db (Chris T)
* New Roles.sql file can be reloaded without prepocessing (Chris T)
* New Roles.sql file leaves no errors on success (Chris T)

Enhancing data integrity
* No longer allow NULL amounts in acc_trans (Chris T)

Control Code Series System (Chris T)
* Covers invoices, orders, transactions, parts, and business units
* Have many different series for the same field (i.e. several series of 
   partnumbers
* Each can set whether it overrides user input.

Installation/Upgrade
* PostgreSQL contrib dependencies removed, now require Pg 8.4 (Chris T)
* LaTeX format detection now run-time call, not configured (Chris T)
* configure_apache.sh: Add search for apache user & config path
  Do not overwrite ledgersmb-httpd.conf without warning (Havard S)

Code/API improvements
* scripts/* files moved to make inheritance possible (Chris T)
* Removed the Config::Std dependency and moved to Config::General (Chris T)
* Improved error handling using Try::Tiny and die (Chris T)
* Added "dynatable.html" template that can be included in templates (Chris T)
* Dynatable forms obtained through GET now show link back to form (Chris T)
* LedgerSMB->error and Form->error now show db version and company (Chris T)
* Simpler use of Log::Log4perl instead of LedgerSMB::Log (Chris T)
* Centralized database commit for new code (Chris T)
* Plugin model for Contact management screen (Chris T)