@@ -1,5 +1,6 @@
 <?lsmb PROCESS 'ui-header.html' ?>
 <?lsmb PROCESS 'elements.html' ?>
+<body class="<?lsmb dojo_theme ?>">
 
 <div class="title"><?lsmb text('Search Reconciliation Reports') ?></div>
         
