@@ -1,7 +1,7 @@
 <?lsmb PROCESS 'ui-header.html' ?>
 <?lsmb PROCESS 'elements.html' ?>
 
-<div class="body" id ="recon1">
+<div class="body" id ="recon1" class="<?lsmb dojo_theme ?>">
     <div class="title">
         New Reconciliation Report
     </div>
